<resources>
    <string name="app_name">ECM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista_turno">LISTA DE TURNO</string>
    <string name="title_activity_msg_num_carreta">MSG NUM. CARRETA</string>
    <string name="title_activity_senha">SENHA</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_padrao_cancelar">CANC</string>
    <string name="texto_senha">SENHA:</string>
    <string name="title_activity_configuracoes">CONFIGURAÇÕES</string>
    <string name="texto_caminhao">CAMINHÃO:</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_atualizar_bd">ATUALIZAR DADOS</string>
    <string name="title_activity_motorista">MOTORISTA</string>
    <string name="title_activity_caminhao">CAMINHÃO</string>
    <string name="title_activity_funcao">FUNÇÃO</string>
    <string name="title_activity_menu_moto_mec">MENU ATIVIDADE</string>
    <string name="texto_motorista">MOTORISTA:</string>
    <string name="texto_cam">1</string>
    <string name="title_activity_tipo_funcoes">TIPOS FUNÇÕES</string>
    <string name="title_activity_noteiro">NOTEIRO</string>
    <string name="texto_noteiro">N. NOTEIRO</string>
    <string name="title_activity_atividade_os">ATIVIDADE</string>
    <string name="texto_atividade">ATIVIDADE:</string>
    <string name="title_activity_msg_atividade_os">MSG ATIVIDADE</string>
    <string name="texto_desc_atividade">TESTE</string>
    <string name="title_activity_certificado">CERTIFICAÇÃO</string>
    <string name="title_activity_os">O.S.</string>
    <string name="texto_os">NUM. OS:</string>
    <string name="title_activity_msg_noteiro">MSG NOTEIRO</string>
    <string name="texto_msg_noteiro">FAVOR ENTREGUE O CELULAR PARA O NOTEIRO FAZER A LIBERAÇÃO.</string>
    <string name="title_activity_msg_aborda_apont">MSG ABORDAR APONTAMENTO</string>
    <string name="title_activity_liberacao">LIBERAÇÃO</string>
    <string name="texto_liberacao">N. LIBERAÇÃO:</string>
    <string name="title_activity_msg_liberacao">MSG LIBERAÇÃO</string>
    <string name="title_activity_maquina">MÁQUINA</string>
    <string name="texto_maquina">N. MÁQUINA:</string>
    <string name="title_activity_operador">OPERADOR</string>
    <string name="texto_operador">N. OPERADOR:</string>
    <string name="title_activity_carreta">CARRETA</string>
    <string name="texto_carreta">N. CARRETA:</string>
    <string name="title_activity_lista_finaliza_apont">FINALIZAR APONTAMENTO</string>
    <string name="title_activity_msg_saida_campo">MSG SAÍDA DE CAMPO</string>
    <string name="texto_saida_campo">DESEJA REALMENTE DAR SAÍDA DO CAMPO?</string>
    <string name="texto_padrao_sim">SIM</string>
    <string name="texto_padrao_nao">NÃO</string>
    <string name="title_activity_ver_motorista">VERIFICAR MOTORISTA</string>
    <string name="title_activity_envio_dados">ENVIO DE DADOS</string>
    <string name="title_activity_espera_atualiza">ESPERA ATUALIZAÇÃO</string>
    <string name="title_activity_frente">FRENTE</string>
    <string name="texto_frente">NUM. FRENTE:</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_padrao_canc">APAGAR</string>
    <string name="texto_num0">0</string>
    <string name="title_activity_desengate_carreta">DESENGATE DE CARRETA</string>
    <string name="texto_desengate_carreta">DESEJA DESENGATAR AS CARRETAS:</string>
    <string name="title_activity_msg_carreta_engate">MSG ENGATE CARRETA</string>
    <string name="texto_msg_carreta_eng">DESEJA ENGATAR A CARRETA 1?</string>
    <string name="title_activity_carreta_engate">ENGATE DE CARRETA</string>
    <string name="texto_carreta_engate">NUM. CARRETA:</string>
    <string name="title_activity_conexao_push">Conexão Push</string>
    <string name="texto_registrar">Registrar</string>
    <string name="title_activity_hodometro">HODOMETRO</string>
    <string name="texto_hodometro">HODOMETRO:</string>
    <string name="title_activity_motivo_parada">MOTIVO PARADA</string>
    <string name="title_activity_boletim">BOLETIM</string>
    <string name="title_activity_backup_boletim">BOLETIM</string>
    <string name="title_activity_backup_viagem_cana">VIAGENS DE CANA</string>
    <string name="texto_padrao_anterior">ANTERIOR</string>
    <string name="texto_padrao_proximo">PROXIMO</string>
    <string name="texto_padrao_retorna">RETORNAR</string>
    <string name="texto_lista_certificado">CERTIFICADO</string>
    <string name="texto_lista_funcao">FUNÇÃO</string>
    <string name="title_activity_menu_inicial_apont">MENU INICIAL</string>
    <string name="title_activity_caminhao_turno">CAMINHÃO TURNO</string>
    <string name="texto_turno">TURNO</string>
    <string name="texto_retornar">RETORNAR</string>
    <string name="title_activity_lista_local">LISTA LOCAL</string>
    <string name="texto_local">LOCAL</string>
    <string name="texto_menu_titulo_motorista">MOTORISTA</string>
    <string name="texto_menu_motorista">1 - FUNCIONARIO FICTICIO</string>
    <string name="texto_menu_titulo_carreta">CARRETA(S): 715 - 720</string>
    <string name="texto_menu_ultima_viagem">NÃO POSSUE CARREGAMENTOS</string>
    <string name="texto_item_list">TESTE</string>
    <string name="texto_lista_motorista_atual">MOTORISTA ATUAL</string>
    <string name="texto_bt_manter_motorista">MANTER</string>
    <string name="texto_bt_trocar_motorista">TROCAR</string>
    <string name="texto_menu_principal">PRINCIPAL - V 3.00</string>
    <string name="texto_cod_motorista">19759</string>
    <string name="texto_nome_motorista">ANDERSON DA SILVA DELGADO</string>
    <string name="texto_motivo_parada">MOTIVOS DE PARADA</string>
    <string name="texto_ret_trabalho">RETORNAR AO TRABALHO</string>
    <string name="texto_conforme">CONFORME (OK)</string>
    <string name="texto_nao_conforme">NÃO CONFORME (ANALISAR)</string>
    <string name="texto_reparo">NÃO CONFORME (REPARO)</string>
    <string name="texto_titulo_checklist">CHECKLIST</string>
    <string name="texto_cancelar">CANCELAR</string>
    <string name="texto_atual_checklist">ATENÇÃO! HÁ NOVAS ATUALIZAÇÕES PARA QUESTÕES DE CHECKLIST. DESEJA ATUALIZÁ-LAS?</string>
    <string name="texto_pos_pneu">POSIÇÃO PNEU</string>
    <string name="texto_pneu">NUM. DO PNEU:</string>
    <string name="texto_pressao_enc">PRESSÃO ENCONTRADA:</string>
    <string name="texto_pressao_col">PRESSÃO COLOCADA:</string>
    <string name="texto_msg_data_hora">POR FAVOR, DIGITE O DIA, MÊS, ANO, HORA E MINUTO ATUAL NAS PRÓXIMAS TELAS.</string>
    <string name="texto_data_hora">DIA:</string>
    <string name="texto_atualizar">ATUALIZAR</string>
    <string name="texto_enc_boletim">ENCERRA BOLETIM</string>
    <string name="texto_titulo_equip">EQUIPAMENTO</string>
    <string name="texto_cod_equip">323</string>
    <string name="texto_descr_equip">CAMINHÃO</string>
</resources>
