<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.usinasantafe.ecm.ListaTurnoActivity">

    <TextView
        android:id="@+id/textViewListaTurno"
        style="@style/TextViewTituloLista"
        android:text="@string/texto_turno" />

    <ListView
        android:id="@+id/turnoListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/buttonRetListaTurno"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_retornar" />

    <Button
        android:id="@+id/buttonAtualTurno"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_atualizar_bd" />

</LinearLayout>
