<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.usinasantafe.ecm.CaminhaoActivity">

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"  >

        <TextView
            android:id="@+id/textViewCaminhao"
            style="@style/TextViewTituloLista"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_caminhao" />

        <TextView
            android:id="@+id/textViewCodCaminhaoTurno"
            style="@style/TextViewTituloLista"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_cam" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightRelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCancCaminhao"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_cancelar" />

        <Button
            android:id="@+id/buttonOkCaminhao"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_ok" />


    </LinearLayout>

</LinearLayout>
