<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.usinasantafe.ecm.MsgAtividadeOSActivity">

    <TextView
        android:id="@+id/textViewNomeAtividade"
        style="@style/TextViewTituloLista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.13"
        android:text="@string/texto_desc_atividade"/>

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancMsgAtivOS"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_cancelar" />

        <Button
            android:id="@+id/buttonOkMsgAtivOS"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_ok" />

    </LinearLayout>

</LinearLayout>
